--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body{
         margin: 10px 20px;
     }
     nav ul li a{
-        color: #F7C790;
+        color: #fb04d2;
         text-decoration: none;
         font-size: 20px;
         position: relative;
@@ -47,7 +47,7 @@ body{
         content: '';
         width: 0;
         height: 3px;
-        background:#897155;
+        background:#e203a7;
         position: absolute;
         left: 0;
         bottom: -6px;
@@ -57,7 +57,7 @@ body{
         width: 100%;
     }
     .header-text p {
-        color: #F7C790;
+        color: #c80390;
         margin-left: 20%;
         font-size: 35px;
         font-style: italic;
@@ -71,12 +71,12 @@ body{
         border: 5px solid;
         margin: auto;
         border-radius: 8px;
-        border-color: #F7C790;
+        border-color: #f300c6;
         
         
     }
     .header-text h1 span{
-        color: #897155;
+        color: #e5009d;
     }
    /*----------------about----------------------------*/
    #about{
@@ -102,7 +102,7 @@ body{
      .sub-title{
         font-size: 60px;
         font-weight: 600;
-        color:#F7C790;
+        color:#c5029b;
      }
      .tab-titles{
         display: flex;
@@ -119,7 +119,7 @@ body{
         content: '';
         width:0;
         height: 3px;
-        background-color: #897155;
+        background-color: #ac0062;
         position:absolute;
         left:0;
         bottom: -8px;
@@ -133,7 +133,7 @@ body{
         margin:10px 0;
      }
      .tab-contents ul li span{
-        color: #F7C790;
+        color: #a6007a;
         font-size: 14px;
      }
      .tab-contents{
@@ -155,7 +155,7 @@ body{
     margin-top: 50px;
 }
 .services-list div{
-    background: #b17a3c;
+    background: #99009e;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
@@ -179,7 +179,7 @@ body{
     display:inline-block ;
 }
 .services-list div:hover{
-    background: #6e3c06;
+    background: #63034b;
     transform: translateY(-10px);
 }
 /*---------------portfolio------------*/
@@ -206,7 +206,7 @@ body{
 .layer{
     width: 100%;
     height: 0;
-    background:linear-gradient(rgba(0,0,0,0.6),#C09C73);
+    background:linear-gradient(rgba(0,0,0,0.6),#b40384);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -228,11 +228,11 @@ body{
 }
 .layer a{
     margin-top: 20px;
-    color: #575010;
+    color: #750046;
     text-decoration: none;
     font-size: 18px;
     line-height: 60px;
-    background-color: #d3b491;
+    background-color: #72026b;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -248,15 +248,15 @@ body{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #faf5f5;
+    border: 1px solid #8f005b;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
-    color: #ffffff;
+    color: #980281;
     transition: background 0.5s;
 }
 .btn:hover{
-    background: #575010;
+    background: #620258;
 }
 /*-----------------contact------------*/
 .contact-left{
@@ -269,7 +269,7 @@ body{
     margin-top: 30px;
 }
 .contact-left p i{
-    color: #d3b491;
+    color: #c920aa;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -285,12 +285,12 @@ body{
     transition: transform 0.5s;
 }
 .social-icons a:hover{
-    color: #d3b491;
+    color: #aa0074;
     transform: translateY(-5px);
 }
 .btn.btn2{
     display: inline-block;
-    background: #d3b491;
+    background: #a00283;
 }
 .contact-right form{
     width: 100%;
@@ -316,7 +316,7 @@ form btn2{
     width: 100%;
     text-align: center;
     padding: 25px 0;
-    background-color: #d3b491;
+    background-color: #80045f;
     font-weight: 300;
     margin-top: 20px;
 }
@@ -337,7 +337,7 @@ nav .fas{
         size: 100%;
     }
     .header-text p {
-        color: #d3b491;
+        color: #9f0b7f;
         margin-left: 20%;
         font-size: 10px;
         font-style: italic;
